Latest vesion with bugs the slow way

--- a/Deezer-lyrics/index.html
+++ b/Deezer-lyrics/index.html
@@ -67,12 +67,6 @@
         <p class="unvisible-lines lyrics-default" id="lyrics-56">Nothing really matters,</p>
         <p class="unvisible-lines lyrics-default" id="lyrics-57">Nothing really matters to me.</p>
         <p class="unvisible-lines lyrics-default" id="lyrics-58">Anyway the wind blows.</p>
-        <p class="unvisible-lines lyrics-default" id="lyrics-59">Mama, ooh,</p>
-        <p class="unvisible-lines lyrics-default" id="lyrics-60">Mama, ooh,</p>
-        <p class="unvisible-lines lyrics-default" id="lyrics-61">Mama, ooh,</p>
-        <p class="unvisible-lines lyrics-default" id="lyrics-62">Mama, ooh,</p>
-        <p class="unvisible-lines lyrics-default" id="lyrics-63">Mama, ooh,</p>
-
 
     </div>
     <div class="micro-off">
@@ -110,6 +104,39 @@
       var ID24 = $('#lyrics-24');
       var ID25 = $('#lyrics-25');
       var ID26 = $('#lyrics-26');
+      var ID27 = $('#lyrics-27');
+      var ID28 = $('#lyrics-28');
+      var ID29 = $('#lyrics-29');
+      var ID30 = $('#lyrics-30');
+      var ID31 = $('#lyrics-31');
+      var ID32 = $('#lyrics-32');
+      var ID33 = $('#lyrics-33');
+      var ID34 = $('#lyrics-34');
+      var ID35 = $('#lyrics-35');
+      var ID36 = $('#lyrics-36');
+      var ID37 = $('#lyrics-37');
+      var ID38 = $('#lyrics-38');
+      var ID39 = $('#lyrics-39');
+      var ID40 = $('#lyrics-40');
+      var ID41 = $('#lyrics-41');
+      var ID42 = $('#lyrics-42');
+      var ID43 = $('#lyrics-43');
+      var ID44 = $('#lyrics-44');
+      var ID45 = $('#lyrics-45');
+      var ID46 = $('#lyrics-46');
+      var ID47 = $('#lyrics-47');
+      var ID48 = $('#lyrics-48');
+      var ID49 = $('#lyrics-49');
+      var ID50 = $('#lyrics-50');
+      var ID51 = $('#lyrics-51');
+      var ID52 = $('#lyrics-52');
+      var ID53 = $('#lyrics-53');
+      var ID54 = $('#lyrics-54');
+      var ID55 = $('#lyrics-55');
+      var ID56 = $('#lyrics-56');
+      var ID57 = $('#lyrics-57');
+      var ID58 = $('#lyrics-58');
+
 
       var lyricsOff = $('.micro-off');
       var lyricsOn = $('.micro-on');
@@ -280,7 +307,7 @@
 
         window.setTimeout(function() {
           ID21.removeClass("unvisible-lines").addClass("second-line");
-        }, 155560);
+        }, 115560);
         window.setTimeout(function() {
           ID21.removeClass("second-line").addClass("current-line");
           ID20.addClass("finished");
@@ -325,6 +352,266 @@
           ID26.removeClass("second-line").addClass("current-line");
           ID25.addClass("finished");
         }, 149540);
+
+        window.setTimeout(function() {
+          ID27.removeClass("unvisible-lines").addClass("second-line");
+        }, 149540);
+        window.setTimeout(function() {
+          ID27.removeClass("second-line").addClass("current-line");
+          ID26.addClass("finished");
+        }, 152710);
+
+        window.setTimeout(function() {
+          ID28.removeClass("unvisible-lines").addClass("second-line");
+        }, 152710);
+        window.setTimeout(function() {
+          ID28.removeClass("second-line").addClass("current-line");
+          ID27.addClass("finished");
+        }, 186700);
+
+        window.setTimeout(function() {
+          ID29.removeClass("unvisible-lines").addClass("second-line");
+        }, 186700);
+        window.setTimeout(function() {
+          ID29.removeClass("second-line").addClass("current-line");
+          ID28.addClass("finished");
+        }, 189560);
+
+        window.setTimeout(function() {
+          ID30.removeClass("unvisible-lines").addClass("second-line");
+        }, 189560);
+        window.setTimeout(function() {
+          ID30.removeClass("second-line").addClass("current-line");
+          ID29.addClass("finished");
+        }, 193170);
+
+        window.setTimeout(function() {
+          ID31.removeClass("unvisible-lines").addClass("second-line");
+        }, 193170);
+        window.setTimeout(function() {
+          ID31.removeClass("second-line").addClass("current-line");
+          ID30.addClass("finished");
+        }, 196720);
+
+        window.setTimeout(function() {
+          ID32.removeClass("unvisible-lines").addClass("second-line");
+        }, 196720);
+        window.setTimeout(function() {
+          ID32.removeClass("second-line").addClass("current-line");
+          ID31.addClass("finished");
+        }, 198310);
+
+        window.setTimeout(function() {
+          ID33.removeClass("unvisible-lines").addClass("second-line");
+        }, 1198310);
+        window.setTimeout(function() {
+          ID33.removeClass("second-line").addClass("current-line");
+          ID32.addClass("finished");
+        }, 199890);
+
+        window.setTimeout(function() {
+          ID34.removeClass("unvisible-lines").addClass("second-line");
+        }, 199890);
+        window.setTimeout(function() {
+          ID34.removeClass("second-line").addClass("current-line");
+          ID33.addClass("finished");
+        }, 201000);
+
+        window.setTimeout(function() {
+          ID35.removeClass("unvisible-lines").addClass("second-line");
+        }, 201000);
+        window.setTimeout(function() {
+          ID35.removeClass("second-line").addClass("current-line");
+          ID34.addClass("finished");
+        }, 203670);
+
+        window.setTimeout(function() {
+          ID36.removeClass("unvisible-lines").addClass("second-line");
+        }, 203670);
+        window.setTimeout(function() {
+          ID36.removeClass("second-line").addClass("current-line");
+          ID35.addClass("finished");
+        }, 206590);
+
+        window.setTimeout(function() {
+          ID37.removeClass("unvisible-lines").addClass("second-line");
+        }, 206590);
+        window.setTimeout(function() {
+          ID37.removeClass("second-line").addClass("current-line");
+          ID36.addClass("finished");
+        }, 209680);
+
+        window.setTimeout(function() {
+          ID38.removeClass("unvisible-lines").addClass("second-line");
+        }, 209680);
+        window.setTimeout(function() {
+          ID38.removeClass("second-line").addClass("current-line");
+          ID37.addClass("finished");
+        }, 214550);
+
+        window.setTimeout(function() {
+          ID39.removeClass("unvisible-lines").addClass("second-line");
+        }, 214550);
+        window.setTimeout(function() {
+          ID39.removeClass("second-line").addClass("current-line");
+          ID38.addClass("finished");
+        }, 217350);
+
+        window.setTimeout(function() {
+          ID40.removeClass("unvisible-lines").addClass("second-line");
+        }, 217350);
+        window.setTimeout(function() {
+          ID40.removeClass("second-line").addClass("current-line");
+          ID39.addClass("finished");
+        }, 221350);
+
+        window.setTimeout(function() {
+          ID41.removeClass("unvisible-lines").addClass("second-line");
+        }, 221350);
+        window.setTimeout(function() {
+          ID41.removeClass("second-line").addClass("current-line");
+          ID40.addClass("finished");
+        }, 224580);
+
+        window.setTimeout(function() {
+          ID42.removeClass("unvisible-lines").addClass("second-line");
+        }, 224580);
+        window.setTimeout(function() {
+          ID42.removeClass("second-line").addClass("current-line");
+          ID41.addClass("finished");
+        }, 226770);
+
+        window.setTimeout(function() {
+          ID43.removeClass("unvisible-lines").addClass("second-line");
+        }, 226770);
+        window.setTimeout(function() {
+          ID43.removeClass("second-line").addClass("current-line");
+          ID42.addClass("finished");
+        }, 229290);
+
+        window.setTimeout(function() {
+          ID44.removeClass("unvisible-lines").addClass("second-line");
+        }, 229290);
+        window.setTimeout(function() {
+          ID44.removeClass("second-line").addClass("current-line");
+          ID43.addClass("finished");
+        }, 230570);
+
+        window.setTimeout(function() {
+          ID45.removeClass("unvisible-lines").addClass("second-line");
+        }, 230570);
+        window.setTimeout(function() {
+          ID45.removeClass("second-line").addClass("current-line");
+          ID44.addClass("finished");
+        }, 232410);
+
+        window.setTimeout(function() {
+          ID46.removeClass("unvisible-lines").addClass("second-line");
+        }, 232410);
+        window.setTimeout(function() {
+          ID46.removeClass("second-line").addClass("current-line");
+          ID45.addClass("finished");
+        }, 234890);
+
+        window.setTimeout(function() {
+          ID47.removeClass("unvisible-lines").addClass("second-line");
+        }, 234890);
+        window.setTimeout(function() {
+          ID47.removeClass("second-line").addClass("current-line");
+          ID46.addClass("finished");
+        }, 238020);
+
+        window.setTimeout(function() {
+          ID48.removeClass("unvisible-lines").addClass("second-line");
+        }, 238020);
+        window.setTimeout(function() {
+          ID48.removeClass("second-line").addClass("current-line");
+          ID47.addClass("finished");
+        }, 242890);
+
+        window.setTimeout(function() {
+          ID49.removeClass("unvisible-lines").addClass("second-line");
+        }, 282890);
+        window.setTimeout(function() {
+          ID49.removeClass("second-line").addClass("current-line");
+          ID48.addClass("finished");
+        }, 244560);
+
+        window.setTimeout(function() {
+          ID50.removeClass("unvisible-lines").addClass("second-line");
+        }, 244560);
+        window.setTimeout(function() {
+          ID50.removeClass("second-line").addClass("current-line");
+          ID49.addClass("finished");
+        }, 255720);
+
+        window.setTimeout(function() {
+          ID51.removeClass("unvisible-lines").addClass("second-line");
+        }, 255720);
+        window.setTimeout(function() {
+          ID51.removeClass("second-line").addClass("current-line");
+          ID50.addClass("finished");
+        }, 261720);
+
+        window.setTimeout(function() {
+          ID52.removeClass("unvisible-lines").addClass("second-line");
+        }, 261720);
+        window.setTimeout(function() {
+          ID52.removeClass("second-line").addClass("current-line");
+          ID51.addClass("finished");
+        }, 266690);
+
+        window.setTimeout(function() {
+          ID53.removeClass("unvisible-lines").addClass("second-line");
+        }, 266690);
+        window.setTimeout(function() {
+          ID53.removeClass("second-line").addClass("current-line");
+          ID52.addClass("finished");
+        }, 273660);
+
+        window.setTimeout(function() {
+          ID54.removeClass("unvisible-lines").addClass("second-line");
+        }, 273660);
+        window.setTimeout(function() {
+          ID54.removeClass("second-line").addClass("current-line");
+          ID53.addClass("finished");
+        }, 296120);
+
+        window.setTimeout(function() {
+          ID55.removeClass("unvisible-lines").addClass("second-line");
+        }, 296120);
+        window.setTimeout(function() {
+          ID55.removeClass("second-line").addClass("current-line");
+          ID54.addClass("finished");
+        }, 315050);
+
+        window.setTimeout(function() {
+          ID56.removeClass("unvisible-lines").addClass("second-line");
+        }, 315050);
+        window.setTimeout(function() {
+          ID56.removeClass("second-line").addClass("current-line");
+          ID55.addClass("finished");
+        }, 316980);
+
+        window.setTimeout(function() {
+          ID57.removeClass("unvisible-lines").addClass("second-line");
+        }, 316980);
+        window.setTimeout(function() {
+          ID57.removeClass("second-line").addClass("current-line");
+          ID56.addClass("finished");
+        }, 320480);
+
+        window.setTimeout(function() {
+          ID58.removeClass("unvisible-lines").addClass("second-line");
+        }, 320480);
+        window.setTimeout(function() {
+          ID58.removeClass("second-line").addClass("current-line");
+          ID57.addClass("finished");
+        }, 344420);
+
+        window.setTimeout(function() {
+          ID58.addClass("finished");
+        }, 350000);
 
       });
       lyricsOn.click(function() { 
